// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mainskill > Global skill arrays > should exclude skills from INGREDIENT_SUPPORT_MAINSKILLS array that don't influence ing production of other mons 1`] = `
[
  "Aura Sphere (Dream Shard Magnet S)",
  "Berry Burst",
  "Bulk Up (Cooking Assist S)",
  "Charge Energy S",
  "Charge Strength M",
  "Charge Strength S",
  "Charge Strength S Range",
  "Cooking Power-Up S",
  "Disguise (Berry Burst)",
  "Draco Meteor (Berry Burst)",
  "Dream Shard Magnet S",
  "Dream Shard Magnet S Range",
  "Hyper Cutter (Ingredient Draw S)",
  "Ingredient Draw S - Cutiefly",
  "Ingredient Draw S - Dwebble",
  "Ingredient Draw S - Hawlucha",
  "Ingredient Draw S - Sandshrew",
  "Ingredient Magnet S",
  "Present (Ingredient Magnet S)",
  "Psystrike (Berry Zone)",
  "Stockpile (Charge Strength S)",
  "Super Luck (Ingredient Draw S)",
  "Tasty Chance S",
  "Versatile",
]
`;

exports[`Mainskill > Global skill arrays > should include all skills in MAINSKILLS array 1`] = `
[
  "Aura Sphere (Dream Shard Magnet S)",
  "Bad Dreams (Charge Strength M)",
  "Berry Burst",
  "Berry Juice (Energy For Everyone S)",
  "Bulk Up (Cooking Assist S)",
  "Charge Energy S",
  "Charge Strength M",
  "Charge Strength S",
  "Charge Strength S Range",
  "Cooking Power-Up S",
  "Disguise (Berry Burst)",
  "Draco Meteor (Berry Burst)",
  "Dream Shard Magnet S",
  "Dream Shard Magnet S Range",
  "Energizing Cheer S",
  "Energy For Everyone S",
  "Extra Helpful S",
  "Heal Pulse (Energizing Cheer S)",
  "Helper Boost",
  "Hyper Cutter (Ingredient Draw S)",
  "Ingredient Draw S - Cutiefly",
  "Ingredient Draw S - Dwebble",
  "Ingredient Draw S - Hawlucha",
  "Ingredient Draw S - Sandshrew",
  "Ingredient Magnet S",
  "Lunar Blessing (Energy For Everyone S)",
  "Metronome",
  "Mimic (Skill Copy)",
  "Minus (Cooking Power-Up S)",
  "Moonlight (Charge Energy S)",
  "Nuzzle (Energizing Cheer S)",
  "Plus (Ingredient Magnet) S - Plusle",
  "Plus (Ingredient Magnet) S - Toxtricity",
  "Present (Ingredient Magnet S)",
  "Psystrike (Berry Zone)",
  "Stockpile (Charge Strength S)",
  "Super Luck (Ingredient Draw S)",
  "Tasty Chance S",
  "Transform (Skill Copy)",
  "Versatile",
]
`;

exports[`Mainskill > Global skill arrays > should include skills in INGREDIENT_SUPPORT_MAINSKILLS array that influence ing production of other mons 1`] = `
[
  "Bad Dreams (Charge Strength M)",
  "Berry Juice (Energy For Everyone S)",
  "Energizing Cheer S",
  "Energy For Everyone S",
  "Extra Helpful S",
  "Heal Pulse (Energizing Cheer S)",
  "Helper Boost",
  "Lunar Blessing (Energy For Everyone S)",
  "Metronome",
  "Mimic (Skill Copy)",
  "Minus (Cooking Power-Up S)",
  "Moonlight (Charge Energy S)",
  "Nuzzle (Energizing Cheer S)",
  "Plus (Ingredient Magnet) S - Plusle",
  "Plus (Ingredient Magnet) S - Toxtricity",
  "Skill Copy",
  "Transform (Skill Copy)",
]
`;
